--- a/Visitenkarte_Website_CK/index.html
+++ b/Visitenkarte_Website_CK/index.html
@@ -107,7 +107,7 @@
     target="_blank" rel="noopener noreferrer">WhatsApp</a> <br>
 
   <a class="option" 
-href="mailto:?subject=Kontakt Teilen&body=Hier ist Christopher Knebel's digitale Visitenkarte: https://pwn-visitenkarte-01.netlify.app">
+href="mailto:?subject=Kontakt Teilen&body=Hier ist Christopher Knebel's digitale Visitenkarte: https://contact-knebelchristopher.netlify.app/">
      Email</a> 
 </div>
 
