--- a/Visitenkarte_Website_CK/index.html
+++ b/Visitenkarte_Website_CK/index.html
@@ -18,7 +18,7 @@
   <img src="images/Logo_PU.png" width="120px" height="30px" style="padding-top: 44px; padding-left: 20px; padding-right: 22px;" alt="Bild 2">
 </div>
 
-      <img src=""  class="profile-img">
+      <img src="images/wn-siegel-blau-weiss.png"  class="profile-img">
    <div class="head">
    <h1>Christopher Knebel</h1>
     <p>Leitung Werkstätte und Sonderbau <br/>
